--- a/src/attendance/automation/gui/view/SignUp.fxml
+++ b/src/attendance/automation/gui/view/SignUp.fxml
@@ -12,49 +12,59 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.SignUpController">
+<AnchorPane id="AnchorPane" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.SignUpController">
     <children>
         <VBox alignment="CENTER" layoutX="14.0" layoutY="26.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <GridPane hgap="10.0" vgap="20.0">
+                <GridPane hgap="10.0" prefWidth="440.0" vgap="20.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" />
                         <ColumnConstraints hgrow="SOMETIMES" />
                     </columnConstraints>
                     <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="25.599996948242186" minHeight="10.0" prefHeight="19.20000305175781" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="42.4" minHeight="10.0" prefHeight="17.599999999999994" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="32.8" minHeight="4.000009155273446" prefHeight="28.799999999999997" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="41.59999084472656" minHeight="19.20000610351562" prefHeight="19.20000610351562" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="47.99999389648437" minHeight="10.399993896484375" prefHeight="11.20001220703125" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="57.600006103515625" minHeight="16.80000000000001" prefHeight="30.39997558593751" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="65.60000000000002" minHeight="9.600018310546858" prefHeight="10.400006103515608" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="63.199981689453125" minHeight="17.599981689453102" prefHeight="17.599981689453102" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="70.4000183105469" minHeight="14.400012207031239" prefHeight="14.400012207031239" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="76.79998779296875" minHeight="24.79998779296875" prefHeight="26.400006103515636" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="93.59999389648436" minHeight="18.399987792968773" prefHeight="34.39999999999998" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="118.4000122070313" minHeight="47.999987792968795" prefHeight="103.20000000000005" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Label fx:id="lblFName" text="First Name" GridPane.rowIndex="1" />
-                        <Label fx:id="lblLName" text="Last Name" GridPane.rowIndex="2" />
-                        <Label fx:id="lblEmail" text="Email" GridPane.rowIndex="3" />
-                        <Label fx:id="lblEmailConfirm" text="Confirm Email" GridPane.rowIndex="4" />
-                        <Label fx:id="lblPass" text="Password" GridPane.rowIndex="5" />
-                        <Label fx:id="lblPassConfirm" text="Confirm Password" GridPane.rowIndex="6" />
-                        <TextField fx:id="txtFName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="txtLName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="txtEmailConfirm" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                        <Label fx:id="lblFName" text="First Name" GridPane.rowIndex="2" />
+                        <Label fx:id="lblLName" text="Last Name" GridPane.rowIndex="4" />
+                        <Label fx:id="lblEmail" text="Email" GridPane.rowIndex="6" />
+                        <Label fx:id="lblEmailConfirm" text="Confirm Email" GridPane.rowIndex="8" />
+                        <Label fx:id="lblPass" text="Password" GridPane.rowIndex="10" />
+                        <Label fx:id="lblPassConfirm" text="Confirm Password" GridPane.rowIndex="11" />
+                        <TextField fx:id="txtFName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtLName" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="txtEmailConfirm" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                  <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="10">
                      <children>
                         <PasswordField fx:id="txtPass" />
-                        <Label fx:id="lblPassError" styleClass="error" text="Password must be at leats 8 characters" visible="false" />
+                        <Label fx:id="lblPassError" styleClass="error" />
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                  <VBox alignment="CENTER" prefHeight="42.0" prefWidth="262.0" GridPane.columnIndex="1" GridPane.rowIndex="11">
                      <children>
                               <TextField fx:id="txtPassConfirm" styleClass="pass2" />
-                        <Label fx:id="lblPassConfError" styleClass="error" text="Passwords do no match" visible="false" />
+                        <Label fx:id="lblPassConfError" styleClass="error" />
                      </children>
                   </VBox>
                   <Label prefHeight="20.0" prefWidth="107.0" text="Username" />
-                  <TextField fx:id="txtUsername" GridPane.columnIndex="1" />
+                  <TextField fx:id="txtUsername" prefHeight="0.0" prefWidth="205.0" GridPane.columnIndex="1" />
+                  <Label fx:id="lblUsernameValidation" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="lblFNameValidation" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="lblLNameValidation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label fx:id="lblEmailValidation" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <Label fx:id="lblEmailConfirmValid" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                     </children>
                 </GridPane>
                 <ButtonBar buttonOrder="L_R">
